--- a/org.eclipse.paho.client.mqttv3/pom.xml
+++ b/org.eclipse.paho.client.mqttv3/pom.xml
@@ -4,12 +4,12 @@
     <parent>
         <groupId>org.eclipse.paho</groupId>
         <artifactId>paho-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>0.9.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>paho-mqtt-client</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>jar</packaging>
     <name>Paho :: MQTT Client library</name>
     <description>MQTT Client library</description> 
