--- a/org.eclipse.paho.android.service/org.eclipse.paho.android.service/pom.xml
+++ b/org.eclipse.paho.android.service/org.eclipse.paho.android.service/pom.xml
@@ -71,6 +71,11 @@
 		<groupId>com.google.android</groupId>
 		<artifactId>support-v4</artifactId>
 		<version>r7</version>
-	</dependency> 
+	</dependency>
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>1.0.13</version>
+		</dependency>
     </dependencies>
 </project>
